<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/txt_fogotPass"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtEdit_emailForgot"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textEmailAddress"
                android:layout_marginStart="10dp"
                android:layout_marginTop="200dp"
                android:layout_marginEnd="10dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:hint="@string/hint_mail"/>

            <Button
                android:id="@+id/btn_ResetPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/border_button"
                android:paddingLeft="10dp"
                android:text="@string/txt_btnResetPass"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="48dp"
                    android:layout_marginTop="150dp"
                    android:text="@string/txt_Doyouhaveaccount"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/btn_GosignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="150dp"
                    android:clickable="true"
                    android:text="@string/btn_homeLogIn"
                    android:textColor="@color/yellow"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>